--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
-							<p>Hi👋🏽! I'm Haidee. I'm in the field of Learning Experience Design.
+							<p>Hi👋🏽! I'm Haidee.</p>
+								
+							<p> I'm in the field of Learning Experience Design.</p>
 								<p><a href="#one" class="button scrolly">Learn more</a></p>
 							</ul>
 						</div>
