--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							<p>Hi👋🏽! I'm Haidee.</p>	
-							<p> I'm in the field of Learning Experience Design.</p>
+							<br> I'm in the field of Learning Experience Design.</br>
 								<p><a href="#one" class="button scrolly">Learn more</a></p>
 							</ul>
 						</div>
