--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							Hi👋🏽! I'm Haidee.<br>	
-							I'm in the field of Learning Experience Design.<br> 
+							I'm in the field of Learning Experience Design.<br><br>
 								<p><a href="#one" class="button scrolly">Learn more</a></p>
 							</ul>
 						</div>
