--- a/generic.html
+++ b/generic.html
@@ -65,7 +65,7 @@
 					</section>
 				
 					<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="nurse" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Enhancing Faculty Development and Support through E-Learning Resources and Training</h1>
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
