--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<h2>Improving Nurse Practitioner Programs and Student Outcomes through E-Learning Tools and Curriculum Innovation</h2>
 									<p> Faculty and students needed better support for navigating and utilizing educational technology, particularly in a blended learning environment. Additionally, there was a need to provide clear instructional content, improve course revisions, and assess the effectiveness of various e-learning tools.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html#nurse" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
