--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
+							<div class="split style1">
+    <section>
 <p>I'd love to hear from you.</p>
 
     </section>
