--- a/generic.html
+++ b/generic.html
@@ -35,23 +35,20 @@
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
 							<p><h3>Background</h3>
 								<p>At <strong>Shopify</strong>, a rapidly growing e-commerce platform, I was tasked with scaling peer-to-peer learning. With engineers already informally sharing knowledge through initiatives like lunch-and-learns and Slack discussions, the challenge was to formalize and expand these efforts without overburdening teams. Recognizing the limitations of building a custom tool from scratch, they decided to adopt <strong>PlusPlus</strong>, a peer-to-peer learning platform developed by an external vendor. This approach allowed Shopify to implement a scalable, effective learning solution while focusing on core business priorities.</p>
-								<h3>Problem Statement</h3>
-								<p>As Shopify grew quickly, the company faced a significant challenge in scaling its internal learning and knowledge-sharing initiatives. Engineers were already engaging in informal learning through spontaneous sessions and discussions, but there was no structured, scalable system in place to manage and support these efforts. Without a formal tool or process, the risk was that valuable knowledge could remain siloed, impacting employee development, collaboration, and overall productivity. Additionally, building a custom solution to address these needs would require significant time and resources that were not readily available due to the company&apos;s rapid growth.</p>
-								<h3>Objectives</h3>
-								<p>The main objectives were to:</p>
+								
+								<h3>Project Goals/h3>
 								<ol>
 									<li><strong>Support peer-to-peer learning</strong> across Shopify by providing a scalable tool.</li>
 									<li><strong>Empower engineers</strong> to share their expertise and improve knowledge transfer.</li>
 									<li><strong>Reduce barriers</strong> to learning by offering training for employees to facilitate knowledge-sharing.</li>
 									<li><strong>Gather data</strong> to inform decisions about learning topics and program effectiveness.</li>
 								</ol>
-								<h3>Tasks</h3>
-								<p>Implementing a phased approach:</p>
+								<h3>My Tasks</h3>
 								<ol>
-									<li><strong>Tool Selection</strong>: Rather than building a new tool, they chose PlusPlus to meet Shopify&apos;s needs while partnering with the vendor for customization.</li>
-									<li><strong>Focus on Early Adopters</strong>: They worked closely with enthusiastic employees to pilot the tool, creating a core group of ambassadors who helped spread adoption across teams.</li>
-									<li><strong>Facilitate Learning</strong>: They provided training for employees to improve their teaching and facilitation skills, helping to create a structured, impactful learning experience.</li>
-									<li><strong>Data Collection and Analysis</strong>: They tracked usage data to refine the program and ensure it aligned with business goals and employee interests.</li>
+									<li>Designed a plan to implement Plus Plus, a peer-to-peer learning platform.</li>
+									<li>Created facilitator guides, activity sheets, and slide decks to support training sessions.</li>
+									<li>Provided training to employees to improve their facilitation skills and engagement in learning activities.</li>
+									<li>Collected feedback and data to refine learning materials and ensure continuous improvement.</li>
 								</ol>
 								<h3>Impact</h3>
 								<p>The initiative had several key outcomes:</p>
@@ -70,11 +67,8 @@
 							<h1 class="major">Enhancing Faculty Development and Support through E-Learning Resources and Training</h1>
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<p><h3>Background</h3>
-								<p>At the Ontario Nurse Practitioner Program, I was responsible for supporting faculty and students with educational technology, maintaining the learning management system (LMS), and introducing new technological tools to enhance teaching and learning experiences. This role involved developing resources, researching best practices, and evaluating e-learning products.</p>
-								<h3>Problem Statement</h3>
-								<p>Faculty and students required better guidance and support for utilizing educational technology in both blended and face-to-face learning environments. Additionally, there was a need to improve course revisions and ensure the effectiveness of e-learning tools.</p>
-								<h3>Objectives</h3>
-								<p>The main objectives were to:</p>
+								<p>At the Ontario Nurse Practitioner Program, I was responsible for supporting faculty and students with educational technology, maintaining the learning management system (LMS), and introducing new technological tools to enhance teaching and learning experiences. This role involved developing resources, researching best practices, and evaluating e-learning products. Faculty and students required better guidance and support for utilizing educational technology in both blended and face-to-face learning environments. Additionally, there was a need to improve course revisions and ensure the effectiveness of e-learning tools.</p>
+								<h3>Project Objectives</h3>
 								<ol>
 									<li>Develop job aids and tutorials for educational tools.</li>
 									<li>Conduct research on best practices for blended and face-to-face learning and share insights with faculty.</li>
@@ -105,9 +99,7 @@
 							<h1 class="major">Designing Engaging and Accessible E-Learning Experiences for Diverse Learners in moocs</h1>
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<p><h3>Background</h3>
-								<p> Carleton University's Department of Psychology offers an Open Access Course (MOOC) available to all students at no cost. Students wishing to earn academic credit must transfer to a Flex Term section, which includes additional academic and financial requirements. I was responsible for creating e-learning materials for both credit and non-credit versions of the course, with a focus on accessibility and engagement.I was responsible for creating e-learning materials for both credit and non-credit courses, including moocs (massive open online courses) that catered to a diverse, global student population.</p>
-								<h3>Problem Statement</h3>
-								<p>There was a need to design engaging and accessible e-learning materials for a diverse range of students, including those enrolled in the free Open Access version and those pursuing academic credit through the Flex Term section. The challenge was to create content that was both scalable for large audiences and customizable for students seeking academic credit.</p>
+								<p> Carleton University's Department of Psychology offers an Open Access Course (MOOC) available to all students at no cost. Students wishing to earn academic credit must transfer to a Flex Term section, which includes additional academic and financial requirements. I was responsible for creating e-learning materials for both credit and non-credit versions of the course, with a focus on accessibility and engagement.I was responsible for creating e-learning materials for both credit and non-credit courses, including moocs (massive open online courses) that catered to a diverse, global student population. There was a need to design engaging and accessible e-learning materials for a diverse range of students, including those enrolled in the free Open Access version and those pursuing academic credit through the Flex Term section. The challenge was to create content that was both scalable for large audiences and customizable for students seeking academic credit.</p>
 								<h3>Objectives</h3>
 								<p>The main objectives were to:</p>
 								<ol>
@@ -117,8 +109,8 @@
 								</ol>
 								<h3>Tasks</h3>
 								<ol>
-									<li>Used Articulate Storyline to design e-learning modules and incorporated gamification techniques to increase engagement and retention.</li>
-									<li>Designed online content, interfaces, and multimedia elements for MOOCs and other learning products.</li>
+									<li>Designed interactive, multimedia-rich learning modules using Articulate Storyline, ensuring accessibility and engagement for diverse learners.</li>
+									<li>Collaborated with Subject Matter Experts (SMEs) to define learning objectives and ensure content was relevant and effective.</li>
 									<li>Collaborated with SMEs and stakeholders to define course objectives, create learning unit outlines, and develop detailed storyboards.</li>
 									<li>Managed on-time delivery of projects by working closely with cross-functional teams and using lean design principles, such as rapid prototyping, iterative testing, and feedback integration.</li>
 								</ol>
