--- a/generic.html
+++ b/generic.html
@@ -36,12 +36,12 @@
 							<p><h3>Background</h3>
 								<p>At <strong>Shopify</strong>, a rapidly growing e-commerce platform, I was tasked with scaling peer-to-peer learning. With engineers already informally sharing knowledge through initiatives like lunch-and-learns and Slack discussions, the challenge was to formalize and expand these efforts without overburdening teams. Recognizing the limitations of building a custom tool from scratch, they decided to adopt <strong>PlusPlus</strong>, a peer-to-peer learning platform developed by an external vendor. This approach allowed Shopify to implement a scalable, effective learning solution while focusing on core business priorities.</p>
 								
-								<h3>Project Goals/h3>
+								<h3>Project Goals</h3>
 								<ol>
-									<li><strong>Support peer-to-peer learning</strong> across Shopify by providing a scalable tool.</li>
-									<li><strong>Empower engineers</strong> to share their expertise and improve knowledge transfer.</li>
-									<li><strong>Reduce barriers</strong> to learning by offering training for employees to facilitate knowledge-sharing.</li>
-									<li><strong>Gather data</strong> to inform decisions about learning topics and program effectiveness.</li>
+									<li>Support peer-to-peer learning across Shopify by providing a scalable tool.</li>
+									<li>Empower engineers to share their expertise and improve knowledge transfer.</li>
+									<li>Reduce barriers to learning by offering training for employees to facilitate knowledge-sharing.</li>
+									<li>Gatherdata to inform decisions about learning topics and program effectiveness.</li>
 								</ol>
 								<h3>My Tasks</h3>
 								<ol>
@@ -52,7 +52,6 @@
 								</ol>
 								<h3>Impact</h3>
 								<p>The initiative had several key outcomes:</p>
-								<ol>
 									<li><strong>Increased Knowledge Transfer</strong>: Engineers were able to share practical, context-rich insights with colleagues, improving internal learning.</li>
 									<li><strong>Scalable Learning Ecosystem</strong>: PlusPlus enabled Shopify to scale peer-to-peer learning efficiently, meeting the needs of both engineers and non-engineers.</li>
 									<li><strong>Data-Driven Decisions</strong>: Insights from usage data allowed the team to tailor learning content to the most relevant and impactful topics.</li>
@@ -76,8 +75,6 @@
 						
 								</ol>
 								<h3>Tasks</h3>
-								<p>Implementing a phased approach:</p>
-								<ol>
 									<li>Created tutorials on using tools like Camtasia, Studio 8, and SharePoint, in both French and English.</li>
 									<li>Researched and published bi-weekly blog posts on blended learning strategies.</li>
 									<li>Developed an online blended orientation session for incoming students using Camtasia Studio 8.</li>
@@ -86,8 +83,6 @@
 
 								</ol>
 								<h3>Impact</h3>
-								<p>The initiative had several key outcomes:</p>
-								<ol>
 									<li>Enhanced faculty proficiency in using educational tools, leading to more efficient course design and delivery.</li>
 									<li>Increased faculty engagement with blended learning strategies, resulting in improved student learning experiences.</li>
 									<li>Streamlined student onboarding through the development of a blended orientation session.</li>
