--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic02.png" alt="" nursingeducation="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Improving Nurse Practitioner Programs and Student Outcomes through E-Learning Tools and Curriculum Innovation</h2>
@@ -69,7 +69,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic03.png" alt="" mooconlinelearning="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Designing Scalable and Engaging Learning Experiences for MOOCs: Optimizing Content, Interfaces, and User Interaction</h2>
