--- a/generic.html
+++ b/generic.html
@@ -59,8 +59,7 @@
 								</ol></p>
 						</div>
 					</section>
-				
-					<!-- Main -->
+					<!-- nurse -->
 					<section id="nurse" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Enhancing Faculty Development and Support through E-Learning Resources and Training</h1>
@@ -89,7 +88,9 @@
 									<li>Fostered a culture of continuous improvement and collaboration between faculty and the e-learning team.</li>
 								</ol></p>
 							<p></p>
-					
+					</section>
+				       <!-- mooc -->
+					<section id="mooc" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Designing Engaging and Accessible E-Learning Experiences for Diverse Learners in moocs</h1>
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
