--- a/generic.html
+++ b/generic.html
@@ -32,7 +32,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Scaling Peer-to-Peer Learning at Shopify</h1>
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic01.png" alt="" /></span>
 							<p><h3>Background</h3>
 								<p>At <strong>Shopify</strong>, a rapidly growing e-commerce platform, I was tasked with scaling peer-to-peer learning. With engineers already informally sharing knowledge through initiatives like lunch-and-learns and Slack discussions, the challenge was to formalize and expand these efforts without overburdening teams. Recognizing the limitations of building a custom tool from scratch, they decided to adopt <strong>PlusPlus</strong>, a peer-to-peer learning platform developed by an external vendor. This approach allowed Shopify to implement a scalable, effective learning solution while focusing on core business priorities.</p>
 								
@@ -63,7 +63,7 @@
 					<section id="nurse" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Enhancing Faculty Development and Support through E-Learning Resources and Training</h1>
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic02.png" alt="" /></span>
 							<p><h3>Background</h3>
 								<p>At the Ontario Nurse Practitioner Program, I was responsible for supporting faculty and students with educational technology, maintaining the learning management system (LMS), and introducing new technological tools to enhance teaching and learning experiences. This role involved developing resources, researching best practices, and evaluating e-learning products. Faculty and students required better guidance and support for utilizing educational technology in both blended and face-to-face learning environments. Additionally, there was a need to improve course revisions and ensure the effectiveness of e-learning tools.</p>
 								<h3>Project Objectives</h3>
@@ -93,7 +93,7 @@
 					<section id="mooc" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Designing Engaging and Accessible E-Learning Experiences for Diverse Learners in moocs</h1>
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic03.png" alt="" /></span>
 							<p><h3>Background</h3>
 								<p> Carleton University's Department of Psychology offers an Open Access Course (MOOC) available to all students at no cost. Students wishing to earn academic credit must transfer to a Flex Term section, which includes additional academic and financial requirements. I was responsible for creating e-learning materials for both credit and non-credit versions of the course, with a focus on accessibility and engagement.I was responsible for creating e-learning materials for both credit and non-credit courses, including moocs (massive open online courses) that catered to a diverse, global student population. There was a need to design engaging and accessible e-learning materials for a diverse range of students, including those enrolled in the free Open Access version and those pursuing academic credit through the Flex Term section. The challenge was to create content that was both scalable for large audiences and customizable for students seeking academic credit.</p>
 								<h3>Objectives</h3>
