--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p>As an Instructional Designer, I bring deep expertise in creating effective learning experiences using instructional design principles and tools. I also have a understanding various technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals.
+							<p>As an Instructional Designer, I bring deep expertise in creating effective learning experiences using instructional design principles and tools. My approach is a blend of art & science - the art of designing a simplified experience with the customer, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep understanding various technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals.
 								I have a broad skill set that combines teaching principles with tech tools to create effective learning experiences. Here’s a breakdown of my skills.</p>
 							<div class="features">
 								<section>
