--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Portfolio</a></li>
-							<li><a href="#two">Principles of Design</a></li>
+							<li><a href="#two">About me</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
