--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							Hi👋🏽! I'm Haidee.<br>	
 							I'm in the field of Learning Experience Design.<br><br>
-								<p><a href="#one" class="button scrolly">Check out Projects</a></p>
+								<p><a href="#one" class="button scrolly">Check out projects</a></p>
 							</ul>
 						</div>
 					</section>
