--- a/generic.html
+++ b/generic.html
@@ -39,13 +39,13 @@
 									<li>Support peer-to-peer learning across Shopify by providing a scalable tool.</li>
 									<li>Empower engineers to share their expertise and improve knowledge transfer.</li>
 									<li>Reduce barriers to learning by offering training for employees to facilitate knowledge-sharing.</li>
-									<li>Gatherdata to inform decisions about learning topics and program effectiveness.</li>
+									<li>Gather data to inform decisions about learning topics and program effectiveness.</li>
 								</ol>
 								<h3>My Tasks</h3>
 								<ol>
 									<li>Designed a plan to implement Plus Plus, a peer-to-peer learning platform.</li>
 									<li>Created facilitator guides, activity sheets, and slide decks to support training sessions.</li>
-									<li>Provided training to employees to improve their facilitation skills and engagement in learning activities.</li>
+									<li>Created product training materials for learning professionals.</li>
 									<li>Collected feedback and data to refine learning materials and ensure continuous improvement.</li>
 								</ol>
 								<h3>Impact</h3>
@@ -66,9 +66,9 @@
 								<p>At the Ontario Nurse Practitioner Program, I was responsible for supporting faculty and students with educational technology, maintaining the learning management system (LMS), and introducing new technological tools to enhance teaching and learning experiences. This role involved developing resources, researching best practices, and evaluating e-learning products. Faculty and students required better guidance and support for utilizing educational technology in both blended and face-to-face learning environments. Additionally, there was a need to improve course revisions and ensure the effectiveness of e-learning tools.</p>
 								<h3>Project Objectives</h3>
 								<ol>
-									<li>Develop job aids and tutorials for educational tools.</li>
-									<li>Conduct research on best practices for blended and face-to-face learning and share insights with faculty.</li>
-									<li>Provide continuous faculty support through training sessions, workshops, and needs assessments.</li>
+									<li>Developed job aids and tutorials for educational tools.</li>
+									<li>Conducted research on best practices for blended and face-to-face learning and share insights with faculty.</li>
+									<li>Provided continuous faculty support through training sessions, workshops, and needs assessments.</li>
 						
 								</ol>
 								<h3>Tasks</h3>
