--- a/generic.html
+++ b/generic.html
@@ -97,13 +97,13 @@
 								<h3>Objectives</h3>
 								<p>The main objectives were to:</p>
 								<ol>
-									<li>Conduct needs analysis to understand learner requirements for both non-credit and credit courses.</li>
-									<li>Develop interactive, engaging, and accessible online learning modules for 2,000 users</li>
-									<li>Collaborate with Subject Matter Experts (SMEs) to define learning objectives and create structured, media-rich content.</li>
+									<li>Conducted needs analysis to understand learner requirements for both non-credit and credit courses.</li>
+									<li>Developed interactive, engaging, and accessible online learning modules for 2,000 users</li>
+									<li>Collaborated with Subject Matter Experts (SMEs) to define learning objectives and create structured, media-rich content.</li>
 								</ol>
 								<h3>Tasks</h3>
 								<ol>
-									<li>Designed interactive, multimedia-rich learning modules using Articulate Storyline, ensuring accessibility and engagement for diverse learners.</li>
+									<li>Designeded interactive, multimedia-rich learning modules using Articulate Storyline, ensuring accessibility and engagement for diverse learners.</li>
 									<li>Collaborated with Subject Matter Experts (SMEs) to define learning objectives and ensure content was relevant and effective.</li>
 									<li>Collaborated with SMEs and stakeholders to define course objectives, create learning unit outlines, and develop detailed storyboards.</li>
 									<li>Managed on-time delivery of projects by working closely with cross-functional teams and using lean design principles, such as rapid prototyping, iterative testing, and feedback integration.</li>
