--- a/generic.html
+++ b/generic.html
@@ -103,7 +103,7 @@
 								</ol>
 								<h3>Tasks</h3>
 								<ol>
-									<li>Designeded interactive, multimedia-rich learning modules using Articulate Storyline, ensuring accessibility and engagement for diverse learners.</li>
+									<li>Designed interactive, multimedia-rich learning modules using Articulate Storyline, ensuring accessibility and engagement for diverse learners.</li>
 									<li>Collaborated with Subject Matter Experts (SMEs) to define learning objectives and ensure content was relevant and effective.</li>
 									<li>Collaborated with SMEs and stakeholders to define course objectives, create learning unit outlines, and develop detailed storyboards.</li>
 									<li>Managed on-time delivery of projects by working closely with cross-functional teams and using lean design principles, such as rapid prototyping, iterative testing, and feedback integration.</li>
