--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							Hi👋🏽! I'm Haidee.<br>	
-							I'm in the field of Learning Experience Design.<br><br>
+							I'm passionate about learning experience design and enablement.<br><br>
 								<p><a href="#one" class="button scrolly">Sample projects</a></p>
 							</ul>
 						</div>
@@ -86,7 +86,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p>As an Instructional Designer, I bring deep expertise in creating effective learning experiences using instructional design principles and tools. My approach is a blend of art & science - the art of designing a simplified experience with the customer, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep expertise in instructional design, learning technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals.
+							<p>As an Instructional Designer, I bring deep expertise in creating effective learning experiences using instructional design principles and . My approach is a blend of art & science - the art of designing a simplified experience with the customer, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep expertise in instructional design, learning technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals.
 								I have a broad skill set that combines teaching principles with tech tools to create effective learning experiences. Here’s a breakdown of my skills.</p>
 							<div class="features">
 								<section>
