--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							Hi👋🏽! I'm Haidee.<br>	
-							I'm passionate about learning experience design and enablement.<br><br>
+							I'm passionate about learning experience design and enablement. I apply learner-centric methodologies, leverage the right technologies, and use data-driven insights to create impactful, scalable learning experiences<br><br>
 								<p><a href="#one" class="button scrolly">Sample projects</a></p>
 							</ul>
 						</div>
