--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<div class="inner">
 							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
 							Hi👋🏽! I'm Haidee.<br>	
-							I'm passionate about learning experience design and enablement. I apply learner-centric methodologies, leverage the right technologies, and use data-driven insights to create impactful, scalable learning experiences<br><br>
+							I'm passionate about building learning and enablement products that scale. <br><br>
 								<p><a href="#one" class="button scrolly">Sample projects</a></p>
 							</ul>
 						</div>
@@ -86,7 +86,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p> My personal mission is to design, deliver, and measure engaging, scalable, and impactful learning experiences that empower people to do their best work. I bring deep expertise in learning and technology. My approach is a blend of art & science - the art of designing a simplified experience with the customer empathy, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep expertise in instructional design, learning technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals.
+							<p> My personal mission is to design, deliver, and measure engaging, scalable, and impactful learning experiences that empower people to do their best work. I bring deep expertise in learning and technology. My approach is a blend of art & science - the art of designing a simplified experience with the customer empathy, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep expertise in instructional design, learning technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals. I apply learner-centric methodologies, leverage the right technologies, and use data-driven insights to create impactful, scalable learning experiences.
 								I have a broad skill set that combines teaching principles with tech tools to create effective learning experiences. Here’s a breakdown of my skills.</p>
 							<div class="features">
 								<section>
