--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1> Instructional Designer | Learning Developer| LMS Management</h1>
+							<h1> Instructional Designer | Learning Developer| Ed Tech Expert</h1>
 							Hi👋🏽! I'm Haidee.<br>	
 							I'm passionate about building learning and enablement products that scale. <br><br>
 								<p><a href="#one" class="button scrolly">Sample projects</a></p>
