--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What I do</h2>
-							<p> My personal mission is to design, deliver, and measure engaging, scalable, and impactful learning experiences that empower people to do their best work. I bring deep expertise in learning and technology. My approach is a blend of art & science - the art of designing a simplified experience with the customer empathy, combined with the science of understanding how to build effective learning products for the learner audience at the right time. I have deep expertise in instructional design, learning technologies, agile methodologies, allowing me to work seamlessly with cross-functional teams. My knowledge of user-centered design and curiosity of business goals ensures that the learning solutions I create are both engaging and aligned with company goals. I apply learner-centric methodologies, leverage the right technologies, and use data-driven insights to create impactful, scalable learning experiences.
-								I have a broad skill set that combines teaching principles with tech tools to create effective learning experiences. Here’s a breakdown of my skills.</p>
+							<p> My mission is to design, deliver, and measure engaging, scalable learning experiences that help people do their best work. I use a learner-centered, data-driven approach that combines creative design with proven learning science. With expertise in instructional design, learning technologies, and agile methods, I work seamlessly with cross-functional teams. By putting learners first, aligning with business goals, and leveraging the right tools, I ensure each solution is both impactful and effective.
+								I have a broad skill set that combines learning design principles with technology to create effective learning experiences. Here’s a breakdown of my skills.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
