--- a/generic.html
+++ b/generic.html
@@ -66,7 +66,7 @@
 								<p>At the Ontario Nurse Practitioner Program, I was responsible for supporting faculty and students with educational technology, maintaining the learning management system (LMS), and introducing new technological tools to enhance teaching and learning experiences. This role involved developing resources, researching best practices, and evaluating e-learning products. Faculty and students required better guidance and support for utilizing educational technology in both blended and face-to-face learning environments. Additionally, there was a need to improve course revisions and ensure the effectiveness of e-learning tools.</p>
 								<h3>Project Objectives</h3>
 								<ol>
-									<li>Developed job aids and tutorials for educational tools.</li>
+									<li>Developed blended learning materials and job aids using authoring tools such as Articulate Rise and Camtasia for nursing course.</li>
 									<li>Conducted research on best practices for blended and face-to-face learning and share insights with faculty.</li>
 									<li>Provided continuous faculty support through training sessions, workshops, and needs assessments.</li>
 						
