--- a/generic.html
+++ b/generic.html
@@ -34,12 +34,12 @@
 							<p><h3>Background</h3>
 								<p>At <strong>Shopify</strong>, a rapidly growing e-commerce platform, I was tasked with scaling peer-to-peer learning. With engineers already informally sharing knowledge through initiatives like lunch-and-learns and Slack discussions, the challenge was to formalize and expand these efforts without overburdening teams. Recognizing the limitations of building a custom tool from scratch, they decided to adopt <strong>PlusPlus</strong>, a peer-to-peer learning platform developed by an external vendor. This approach allowed Shopify to implement a scalable, effective learning solution while focusing on core business priorities.</p>
 								
-								<h3>Project Goals</h3>
+								<h3>Project goals</h3>
 								<ol>
-									<li>Support peer-to-peer learning across Shopify by providing a scalable tool.</li>
+									<li>Support peer-to-peer learning across Shopify by implementing a learning management system.</li>
 									<li>Empower engineers to share their expertise and improve knowledge transfer.</li>
 									<li>Reduce barriers to learning by offering training for employees to facilitate knowledge-sharing.</li>
-									<li>Gather data to inform decisions about learning topics and program effectiveness.</li>
+									<li>Gather data to inform decisions about learning efficacy and program effectiveness.</li>
 								</ol>
 								<h3>My Tasks</h3>
 								<ol>
