--- a/generic.html
+++ b/generic.html
@@ -29,31 +29,31 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">Scaling Peer-to-Peer Learning at Shopify</h1>
+							<h1 class="major">Scaling Sales Enablement to Drive Revenue Success at Shopify</h1>
 							<span class="image fit"><img src="images/pic01.png" alt="" /></span>
 							<p><h3>Background</h3>
-								<p>At <strong>Shopify</strong>, a rapidly growing e-commerce platform, I was tasked with scaling peer-to-peer learning. With engineers already informally sharing knowledge through initiatives like lunch-and-learns and Slack discussions, the challenge was to formalize and expand these efforts without overburdening teams. Recognizing the limitations of building a custom tool from scratch, they decided to adopt <strong>PlusPlus</strong>, a peer-to-peer learning platform developed by an external vendor. This approach allowed Shopify to implement a scalable, effective learning solution while focusing on core business priorities.</p>
+								<p> At Shopify, I was tasked with scaling sales enablement programs to support the growing needs of our global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams.As part of a company-wide initiative to enhance understanding and engagement with incentive compensation plans, I was tasked with designing and rolling out training programs. The challenge was ensuring the content resonated with diverse audiences, from individual contributors to executives, while aligning with revenue operations, HR, and finance strategies.</p>
 								
 								<h3>Project goals</h3>
 								<ol>
-									<li>Support peer-to-peer learning across Shopify by implementing a learning management system.</li>
-									<li>Empower engineers to share their expertise and improve knowledge transfer.</li>
-									<li>Reduce barriers to learning by offering training for employees to facilitate knowledge-sharing.</li>
-									<li>Gather data to inform decisions about learning efficacy and program effectiveness.</li>
+									<li>Scale sales enablement programs to support the growth of global revenue teams, including Solution Engineers, Launch Consultants, and Customer Success teams.</li>
+									<li>Formalize and expand knowledge-sharing efforts using a scalable platform to ensure consistency and effectiveness.</li>
+									<li>Align enablement initiatives with Shopify’s GTM priorities, product launches, and service offerings.</li>
+									<li>Empower revenue teams to articulate value propositions effectively and improve customer interactions.</li>
 								</ol>
 								<h3>My Tasks</h3>
 								<ol>
-									<li>Designed a plan to implement Plus Plus, a peer-to-peer learning platform.</li>
-									<li>Created facilitator guides, activity sheets, and slide decks to support training sessions.</li>
-									<li>Created product training materials for learning professionals.</li>
-									<li>Collected feedback and data to refine learning materials and ensure continuous improvement.</li>
+									<li>Partnered with cross-functional teams (Product, Revenue Operations, and Customer Success) to align enablement efforts with GTM strategies and key business priorities.</li>
+									<li>Gathered and analyzed data from platform usage and participant feedback to refine learning materials and continuously improve program effectiveness.</li>
+									<li>Scalable Sales Enablement: PlusPlus supported synchronous training across Shopify’s growing global revenue organization and time zones.</li>
+									<li>Collected feedback and data to ensure continuous improvement.</li>
 								</ol>
 								<h3>Impact</h3>
 								<p>The initiative had several key outcomes:</p>
-									<li><strong>Increased Knowledge Transfer</strong>: Engineers were able to share practical, context-rich insights with colleagues, improving internal learning.</li>
+									<li>Revenue Growth: Increased confidence and preparedness among sales teams led to faster time-to-productivity for new hires and stronger customer engagement.</li>
 									<li><strong>Scalable Learning Ecosystem</strong>: PlusPlus enabled Shopify to scale peer-to-peer learning efficiently, meeting the needs of both engineers and non-engineers.</li>
-									<li><strong>Data-Driven Decisions</strong>: Insights from usage data allowed the team to tailor learning content to the most relevant and impactful topics.</li>
-									<li><strong>Enhanced Employee Engagement</strong>: The program fostered a culture of collaboration and continuous learning, leading to higher engagement and retention among employees.</li>
+									<li>Enhanced Engagement: Fostered a culture of knowledge sharing and continuous learning, driving alignment and retention across revenue teams.</li>
+									<li>Data-Driven Decisions: Usage data identified impactful learning topics, ensuring the program remained aligned with revenue and GTM goals</li>
 								</ol></p>
 						</div>
 					</section>
