--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							<a href="#" class="image"><img src="images/pic01.png" alt="" peertopeerlearning="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Scaling Peer-to-Peer Learning at Shopify</h2>
-									<p>As Shopify grew rapidly, there was no structured system to scale peer-to-peer learning, and informal knowledge-sharing efforts lacked organization. Without a formal tool, valuable knowledge risked becoming siloed, and building a custom solution was not feasible due to limited resources.</p>
+									<h2>Scaling Sales Enablement to Drive Revenue Success at Shopify</h2>
+									<p>Shopify was experiencing hypergrowth, and revenue teams relied heavily on informal knowledge-sharing through Slack and ad-hoc meetings. While effective in smaller teams, this approach wasn’t scalable and didn’t provide consistent, actionable insights for new or existing team members. To address this, I implemented PlusPlus, a peer-to-peer learning platform, to formalize and scale knowledge-sharing initiatives.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
